# RAGScope

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md
experiments/: latest_leaderboard.csv  results_2026-02-23T08-26-20Z.csv  results_2026-02-23T08-26-20Z.json  results_2026-02-23T09-59-39Z.csv  results_2026-02-23T09-59-39Z.json
ragscope/: .env.example  .gitignore  README.md  __init__.py  experiment_runner.py  pyproject.toml
ragscope/api/: __init__.py  main.py
ragscope/configs/: __init__.py  experiment_config.py
ragscope/dashboard/: app.py
ragscope/evaluators/: __init__.py  ragas_evaluator.py
ragscope/pipelines/: __init__.py  rag_pipeline.py
ragscope/ragscope/: experiment_runner.py
ragscope/ragscope/configs/: experiment_config.py
ragscope/ragscope/evaluators/: ragas_evaluator.py
ragscope/ragscope/pipelines/: rag_pipeline.py
ragscope/ragscope/retrievers/: __init__.py  retriever_factory.py
ragscope/ragscope/tracking/: wandb_logger.py
ragscope/retrievers/: retriever_factory.py
ragscope/tests/: __init__.py  test_evaluator.py  test_pipeline.py
ragscope/tracking/: __init__.py  wandb_logger.py
