[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ragscope"
version = "0.1.0"
description = "Automated benchmarking and evaluation framework for RAG pipelines"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.1.0",
    "langchain-community>=0.0.20",
    "langchain-ollama>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-text-splitters>=0.0.1",
    "pypdf>=3.0.0",
    "llama-index>=0.10.0",
    "ragas>=0.1.0",
    "qdrant-client>=1.7.0",
    "openai>=1.0.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sentence-transformers>=2.2.0",
    "pandas>=2.0.0",
    "wandb>=0.16.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ragscope*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
